# peaksql

./: .buildinfo  .flake8  .gitignore  .travis.yaml  .travis.yml  LICENSE  README.md  api.html  environment.yaml  environment.yml  genindex.html  index.html  objects.inv  peaksql.datasets.rst  peaksql.rst  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.py  test.py
.doctrees/: api.doctree  environment.pickle  index.doctree  readme.doctree
.github/: CODEOWNERS
.github/workflows/: ContinuousDeployment.yml  ContinuousIntegration.yml  Docs.yml  continuousdeployment.yml  continuousintegration.yml  docs.yml  testing.yml
PeakSQL/: __init__.py  _database_sql.py  database.py  tables.py
_sources/: index.rst.txt
docs/: api.rst  conf.py  index.rst  modules.rst  peaksql.rst  readme.rst
peaksql/: __about__.py  __init__.py  database.py  dataset.py  datasets.py  tables.py  trash.py  util.py
peaksql/datasets/: base.py  basedataset.py  bed.py  bedgraph.py  bedregion.py  bigwig.py  labeler.py  narrowpeak.py
test/: test_01_util.py  test_02_database.py  test_03_beddataset.py  test_03_dataset.py  test_04_dataloader_integration.py  test_util.py
test/data/: assembly1.fa  assembly1.fa.fai  assembly1.narrowPeak  assembly2.bed  assembly2.fa  assembly2.fa.fai
