[project]
name = "peaksql"
packages = ["peaksql", "peaksql/datasets"]
version = "0.0.2"
description = "TODO: add peaksq description"
author = [
    "Maarten van der Sande <maartenvandersande@hotmail.com>"]
license = "MIT"
url= "https://github.com/vanheeringen-lab/peaksql"

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"]

install_requires = ["pyfaidx", "pybedtools", "pybigwig", "numba"]

[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.coverage]
[tool.coverage.run]
omit = ["test"]

[tool.black]

[mypy]
ignore_missing_imports = true

# flake8 does not support pyproject.toml (yet?!) 
# [flake8] ...

