[project]
name = "peaksql"
packages = ["peaksql", "peaksql/datasets"]
version = "0.0.3"
description = "TODO: add peaksq description"
author = [
    "Maarten van der Sande <maartenvandersande@hotmail.com>"]
license = "MIT"
url= "https://github.com/vanheeringen-lab/peaksql"

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"]

install_requires = ["pyfaidx", "numba", "numpy", "pandas"]
python_requires = ">3.7"

[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.coverage]
[tool.coverage.run]
omit = ["test"]

[tool.black]

[mypy]
ignore_missing_imports = true

# flake8 does not support pyproject.toml (yet?!) 
# [flake8] ...

